# beep

./: .gitignore  MANIFEST.in  beep.py  deploy.bat  launcher.py  setup.cfg
beep/: __main__.py
