[metadata]
name = beep
version = attr: beep.__version__
author = Natalie Fearnley
author_email = nfearnley@gmail.com
description = beep
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = beep
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
project_urls =
    Source = https://github.com/nfearnley/beep
    Tracker=https://github.com/nfearnley/beep/issues

[options]
packages = find:
python_requires = >=3.7
zip_safe = yes

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
